fix overflows

--- a/src/components/Create/Wizard/Task/Steps/StepsForm.module.styl
+++ b/src/components/Create/Wizard/Task/Steps/StepsForm.module.styl
@@ -8,9 +8,6 @@
   background-color: color-light-blue
   border: 1px solid color-heavy-blue
 
-  max-height: calc(100vh - 390px)
-  overflow-y: scroll;
-
 .list
   box-sizing: border-box;
   padding: 40px 0
