--- a/src/components/Create/Wizard/Templates.module.styl
+++ b/src/components/Create/Wizard/Templates.module.styl
@@ -6,9 +6,9 @@
 
 .templates
   box-sizing: border-box;
-  border: 1px solid color-heavy-blue;
-  border-radius: 5px
 
   margin-top: 50px
-  height: calc(100vh - 390px)
-  min-height: 300px
+  min-height: calc(100vh - 390px)
+
+  border: 1px solid color-heavy-blue;
+  border-radius: 5px
