--- a/src/components/shared/Templates/Templates.module.styl
+++ b/src/components/shared/Templates/Templates.module.styl
@@ -32,7 +32,15 @@
 
 .list
   flex-grow: 1
+  position: relative;
   overflow-y: scroll;
+
+.inner
+  position: absolute;
+  left: 0
+  right: 0
+  top: 0
+  bottom: 0
 
 
 .i
